# rlux

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  LangDoc.md  README.md
lib-rlux-ir/: Cargo.toml
lib-rlux-ir/src/: lib.rs
lib_rlux_ir/: Cargo.toml
lib_rlux_ir/src/: lib.rs
lib_rlux_types/: Cargo.toml
lib_rlux_types/src/: lib.rs  types.rs
lib_rlux_types/src/types/: display_traits.rs  math_traits.rs
lib_rlux_types/src/types/lux_functions/: user.rs
src/: ast.rs  display_traits.rs  enviroment.rs  interpreter.rs  ir.rs  macros.rs  main.rs  parser.rs  scanner.rs  tests.rs  token.rs  types.rs
src/interpreter/: interpret_ir.rs  interpreter_impl.rs  interpreter_traits.rs
src/parser/: ast.rs  expression.rs  interpreter.rs  mod.rs  statement.rs
src/parser/ast/: expression.rs  interpreter.rs  statement.rs
src/parser/expression/: mod.rs  parser_impl.rs
src/parser/statement/: interpreter_impl.rs  mod.rs  parser_impl.rs
src/tests/: closure_scope_test.lux  comparison_test.lux  comparison_text.lux  control_test.lux  for_loop_test.lux  function_test.lux  leibniz.lux  math_test.lux  mod.rs  performance_test.lux  scope_test.lux  test_script.lux
src/types/: display_traits.rs  expression.rs  functional_traits.rs  lux_functions.rs  math_traits.rs  mod.rs  statement.rs  token.rs
src/types/lux_functions/: clock.rs  mod.rs  print.rs  user.rs
