[package]
name = "rlux"
version = "0.4.0"
edition = "2024"
authors = ["Chase Townsend <mctownsend2002@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.15"
clap = { version = "4.5.42", features = ["derive"] }
rand_chacha = "0.9.0"

[profile.dev]
debug = true
panic ="unwind"

[profile.release]
debug = true
panic="unwind"
